@@ -6,6 +6,8 @@
 	
 	* inst/include/Rcpp/stats/random/rbeta.h: Added rbeta and rbeta_
 
+	* inst/include/Rcpp/stats/random/rcauchy.h: Added rcauchy and rcauchy_
+
 	* inst/include/Rcpp/stats/stats.h : fixed name clash reported on Rcpp-devel
 	http://permalink.gmane.org/gmane.comp.lang.r.rcpp/610
 
